--- a/app/internal/composer.json
+++ b/app/internal/composer.json
@@ -17,31 +17,14 @@
     "require": {
         "php": ">=7.4",
         "ext-intl": "*",
-        "laminas/laminas-escaper": "^2.5",
-        "laminas/laminas-eventmanager": "^2.5",
-        "laminas/laminas-filter": "^2.5",
-        "laminas/laminas-form": "^2.5",
-        "laminas/laminas-http": "^2.5",
-        "laminas/laminas-i18n": "^2.5",
-        "laminas/laminas-inputfilter": "^2.5",
-        "laminas/laminas-loader": "^2.5",
-        "laminas/laminas-modulemanager": "^2.5",
-        "laminas/laminas-mvc": "^2.5",
-        "laminas/laminas-navigation": "<=2.13.0",
-        "laminas/laminas-servicemanager": "^2.5",
-        "laminas/laminas-session": "^2.5",
-        "laminas/laminas-stdlib": "^2.5",
-        "laminas/laminas-validator": "^2.5",
-        "laminas/laminas-view": "^2.5",
         "doctrine/annotations": "^1.8",
-        "lm-commons/lmc-rbac-mvc": "^2.6",
         "olcs/olcs-transfer": "~4.206.0",
         "olcs/olcs-utils": "~4.206.0",
         "olcs/olcs-auth": "~4.206.0",
         "soflomo/purifier": "^1.0",
         "olcs/olcs-logging": "~4.206.0",
         "olcs/olcs-common": "~4.206.0",
-        "laminas/laminas-dependency-plugin": "^2.0",
+        "olcs/olcs-laminas": "~2.5.0",
         "firebase/php-jwt": "^6.0"
     },
     "require-dev": {
@@ -64,7 +47,7 @@
         "preferred-install": "dist",
         "secure-http": false,
         "platform": {
-            "php": "7.4.26"
+            "php": "7.4.33"
         },
         "sort-packages": true,
         "allow-plugins": {
