--- a/app/internal/composer.json
+++ b/app/internal/composer.json
@@ -16,20 +16,11 @@
     ],
     "require": {
         "php": ">=7.4",
-        "ext-intl": "*",
-        "doctrine/annotations": "^1.8",
-        "olcs/olcs-transfer": "~4.206.0",
-        "olcs/olcs-utils": "~4.206.0",
-        "olcs/olcs-auth": "~4.206.0",
-        "soflomo/purifier": "^1.0",
-        "olcs/olcs-logging": "~4.206.0",
-        "olcs/olcs-common": "~4.206.0",
-        "olcs/olcs-laminas": "~2.5.0",
-        "firebase/php-jwt": "^6.0"
+        "olcs/olcs-frontend-deps": "~4.206.0",
+        "olcs/olcs-laminas": "~2.5.0"
     },
     "require-dev": {
-        "olcs/olcs-devtools": "~4.206.0",
-        "olcs/olcs-testhelpers": "~4.206.0"
+        "olcs/olcs-devtools": "~4.206.0"
     },
     "autoload": {
         "classmap": [
