VOL-3712 prep for laminas component installer

--- a/app/internal/composer.json
+++ b/app/internal/composer.json
@@ -42,6 +42,7 @@
         },
         "sort-packages": true,
         "allow-plugins": {
+            "laminas/laminas-component-installer": true,
             "laminas/laminas-dependency-plugin": true,
             "elendev/composer-push": true,
             "phpstan/extension-installer": true
