--- a/app/selfserve/composer.json
+++ b/app/selfserve/composer.json
@@ -20,6 +20,8 @@
         "olcs/olcs-laminas": "~2.5.0"
     },
     "require-dev": {
+        "laminas/laminas-developer-tools": "*",
+        "san/san-session-toolbar": "*",
         "olcs/olcs-devtools": "~4.206.0"
     },
     "autoload": {
