--- a/app/internal/config/autoload/local.php.dist
+++ b/app/internal/config/autoload/local.php.dist
@@ -15,7 +15,7 @@ return array(
                     'backend' => [
                         'options' => [
                             // Backend service URI *Environment specific*
-                            'route' => 'olcs-backend.olcs.gov.uk',
+                            'route' => 'backend-nginx',
                         ]
                     ]
                 ]
@@ -28,7 +28,7 @@ return array(
         'endpoints' => [
             // Backend service URI *Environment specific*
             'backend' => [
-                'url' => 'http://olcs-backend.olcs.gov.uk/',
+                'url' => 'backend-nginx',
                 'options' => [
                     'adapter' => \Laminas\Http\Client\Adapter\Curl::class,
                     'timeout' => 60,
@@ -69,7 +69,7 @@ return array(
     ],
 
     // Asset path, URI to olcs-static (CSS, JS, etc) *Environment specific*
-    'asset_path' => 'https://iuap1.olcs.dev.nonprod.dvsa.aws/static/public',
+    'asset_path' => 'http://localhost:7001',
 
     'openam' => [
         'url' => 'http://olcs-auth.olcs.gov.uk:8081/secure/',
@@ -94,7 +94,7 @@ return array(
             'writers' => [
                 'full' => [
                     'options' => [
-                        'stream' => '/var/tmp/internal.log'
+                        'stream' => 'php://stdout'
                     ],
                 ]
             ]
@@ -138,7 +138,7 @@ return array(
                 'name' => 'redis',
                 'options' => [
                     'server' => [
-                        'host' => '127.0.0.1',
+                        'host' => 'redis',
                         'port' => 6379,
                     ],
                     'lib_options' => [
