--- a/app/internal/composer.json
+++ b/app/internal/composer.json
@@ -16,6 +16,7 @@
     ],
     "require": {
         "php": ">=7.4",
+        "dvsa/laminas-config-cloud-parameters": "^0.1.0",
         "olcs/olcs-frontend-deps": "~4.206.0",
         "olcs/olcs-laminas": "~2.5.0"
     },
