--- a/app/internal/composer.json
+++ b/app/internal/composer.json
@@ -6,6 +6,14 @@
             "packagist": false
         },
         {
+            "type": "composer",
+            "url": "https://nexus.olcs.dev-dvsacloud.uk/repository/Packagist-Proxy",
+            "only": [
+                "olcs/olcs-logging",
+                "olcs/olcs-utils"
+            ]
+        },
+        {
             "url": "https://nexus.olcs.dev-dvsacloud.uk/repository/OLCS",
             "type": "composer"
         },
@@ -37,6 +45,8 @@
             "CommonTest\\": "vendor/olcs/olcs-common/test/Common/"
         }
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "config": {
         "preferred-install": "dist",
         "secure-http": false,
