VOL-4648 Bump `olcs/olcs-frontend-deps`

--- a/app/selfserve/composer.json
+++ b/app/selfserve/composer.json
@@ -10,7 +10,8 @@
             "url": "https://nexus.olcs.dev-dvsacloud.uk/repository/Packagist-Proxy",
             "only": [
                 "olcs/olcs-logging",
-                "olcs/olcs-utils"
+                "olcs/olcs-utils",
+                "olcs/olcs-transfer"
             ]
         },
         {
