vol-4649 bump olcs/olcs-front-deps

--- a/app/internal/composer.json
+++ b/app/internal/composer.json
@@ -12,7 +12,8 @@
                 "olcs/olcs-logging",
                 "olcs/olcs-utils",
                 "olcs/olcs-transfer",
-                "olcs/olcs-auth"
+                "olcs/olcs-auth",
+                "olcs/olcs-common"
             ]
         },
         {
