feat!: migrate to GitHub (dvsa/olcs-selfserve#6)
* chore(deps): remove Nexus dependencies

* chore(deps): Remove dependency on olcs-laminas

* chore(deps): Remove dependency on olcs/olcs-devtools

* chore(ci-cd): add CI/CD workflow

* chore(config): add configuration files for maintaining code consistency and quality

* chore: moved phpUnit config to root directory

* chore(deps): added dev dependencies packages

* chore(deps): update PSR-4 autoloading configuration

* chore(tests): update namespace in test files

* chore(tests): missing testHelpers Trait file added

* chore: updated .gitignore

* chore(test): updated namespaces in the test file

* Feat: missing Abstract file added and namespacing added accordingly

* Feat: Added missing namespace

* Feat: BootStrap reliance removed

* Feat: TestHelper Class added

* Feat: BootStrap reliance removed

* Feat: Missing serviceManager method added

* Feat: Setting up Logger initially

* Feat: Code standard correct path added

* chore(deps): updated dependencies

* chore(deps): added new dependencies

* chore(deps): update olcs/common to ^4.206.516

* chore: removed lock files

* chore(deps): updated packages for composer to pick appropriate version

* chore: updated .gitignore

* chore(deps): added, removed and updated packages as required and need accordingly

* chore(deps): added, removed and updated packages as required and needed accordingly

* chore(deps): added, removed and updated packages as required and needed accordingly

* chore: Removed debugging flagged to stop on error

* chore: Removed in favor of default setting

* chore(deps): added, removed and updated packages as required and needed accordingly

* chore: project specific workflow added

* chore: added correct path of phpstan and psalm

--- a/app/selfserve/.gitignore
+++ b/app/selfserve/.gitignore
@@ -6,7 +6,7 @@ nbproject
 .idea
 .project
 .settings
-vendor/
+vendor
 test/coverage-report
 config/autoload/*.php
 .sublime-project
@@ -17,3 +17,12 @@ node_modules
 .vscode/
 test/coverage/
 .scannerwork/
+/vendor-bin/*/composer.lock
+.phpunit.result.cache
+
+# Non-dist files for the static analysis.
+# This allows developers to set a different (more strict) static analysis locally.
+phpcs.xml
+phpstan.neon
+phpunit.xml
+psalm.xml
