fix: set `memory_limit` to 4G in PHPUnit configuration (dvsa/olcs-selfserve#9)

--- a/app/selfserve/phpunit.xml.dist
+++ b/app/selfserve/phpunit.xml.dist
@@ -6,6 +6,7 @@
 >
   <php>
     <ini name="date.timezone" value="UTC"/>
+    <ini name="memory_limit" value="4G" />
   </php>
   <testsuites>
     <testsuite name="OLCS Selfserve Application">
