fix: remove form unit tests (dvsa/olcs-selfserve#11)
* fix: remove form unit tests

* fix: add missing permits namespace

* chore: bump `olcs-common` to `5.0.0-alpha.3`

--- a/app/selfserve/composer.json
+++ b/app/selfserve/composer.json
@@ -36,6 +36,7 @@
     "autoload": {
         "classmap": [
             "module/Olcs/src",
+            "module/Permits/src",
             "module/Application/src",
             "vendor/olcs/olcs-common/Common/src/Common"
         ],
